# opencl-samples

./: .gitignore  README.md
caffe-blob/: CMakeLists.txt  blob-reader.cpp  max-pool.cpp
empty/: CMakeLists.txt  addone.cpp  empty.cpp
test-data/bvlc-alexnet/: Makefile  freeze.py
test-data/bvlc-caffenet/: Makefile  netinfo.py
test-data/bvlc-caffenet/ilsvrc12/: .gitignore
test-data/bvlc-caffenet/tests/: blob_test.py  test_blobs.py
test-data/tools/: netinfo.py
